AddItem section is created

--- a/ShoppingList/Views/Item/Index.cshtml
+++ b/ShoppingList/Views/Item/Index.cshtml
@@ -4,7 +4,8 @@
 *@
 @{
 }
-
+<h1>Here is your shopping list</h1>
+<a class="btn btn-primary" asp-action="Index" asp-controller="ManageItem" >Add Item</a>
 <div class="container">
     <div class="row">
         @foreach(var item in Model){
