--- a/ShoppingList/Views/ManageItem/Index.cshtml
+++ b/ShoppingList/Views/ManageItem/Index.cshtml
@@ -6,18 +6,21 @@
 }
 <h3>Item details</h3>
 
-<form method="post" class="w-50">
+<form method="post" class="w-50">            
     <div class="form-group mb-2">
         <label asp-for="Title">Title</label>
         <input asp-for="Title" type=" text" class="form-control" placeholder="Milk" maxlength="40">
+        <span asp-validation-for="Title" class="text-danger"></span>
     </div>
     <div class="form-group mb-2">
         <label asp-for="Description">Description   </label>
-        <textarea asp-for="Description" type="text" class="form-control" id="description" placeholder="5kg or Nestle" maxlength="110"></textarea>
+        <textarea asp-for="Description" type="text" class="form-control" id="description" placeholder="5kg or Nestle" ></textarea>
+        <span asp-validation-for="Description" class="text-danger"></span>
     </div>
     <div class="form-group mb-2">
         <label asp-for="FromWhere" for="fromWhere">Bring from here</label>
-        <input asp-for="FromWhere" type="text" class="form-control" id="fromWhere" placeholder="Spar" maxlength="40">
+        <input asp-for="FromWhere" type="text" class="form-control" id="fromWhere" placeholder="Spar">
+        <span asp-validation-for="FromWhere" class="text-danger"></span>
     </div>
     <div class="">
 
@@ -26,3 +29,8 @@
         <button class="btn btn-dark" asp-action="Index" asp-controller="Item">Back to the page</button>
     </div>
 </form>
+@section Scripts{
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+}
